src/snapshots/ck__ui_tests__add_filter_popup.snap
---
source: src/ui_tests.rs
assertion_line: 309
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread                                            5 posts  ·  2 new


    Named !Trip   OP  2026-09-21 09:13 · 5h ago  No.1000
    Snapshot thread
    op.png  800x600 · 121 KB

    A thread for snapshot tests.
    It has a f  Filter like No.1000                           enter add · esc cancel

    Replies  >  posts by Named !Trip                                            name
                posts with this image                                            md5
                files named like op                                         filename
                threads titled Snapshot thread                               subject
    Anonymous
                Do      hide them                               a: highlight instead
    >>1000 (OP  Where   all of 4chan                                       s: change
    >implying   Label   Named !Trip                                          e: edit
                                                                  w: a word from it…
    Replies  >  Saved in the config as a [[filter]]; u right after takes it back.



    Anonymous  2026-09-21 11:13 · 3h ago  No.1002

    Code:
    fn main() {
        println!("snapshot");
    }
 j/k post   tab images & links   f hints   . more   enter quote   c conversation   u back   / search
