src/snapshots/ck__ui_tests__archive_search_results.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  desuarchive  ›  /g/  ›  Search: rust borrow checker                          4 of 4290 results

  ▌ Anonymous  in thread 109914360                                       No.109920091  ·  0s ago
    >>109918208 c have no borrow checking it takes less mental capacity to follow and write
    types and you can interact with memory as you wish, not as rust wish. also borrow checker …

    Anonymous  in thread 109912686                                       No.109914413  ·  0s ago
    >>109913119 Your dependencies are very unlikely to follow an arbitrary guidelines you put on
    your code.  >>109913062 Using unsafe or Rcs everywhere because of borrow checker is a sign …

    Anonymous  in thread 109912686                                       No.109913062  ·  0s ago
    >>109913033 >Advantage over C, but not Rust since it has generics and static dispatch. Yes.
    Rust makes it easier than even C++ to write decent code by default. However, the borrow …

    Anonymous  in thread 109910711                                       No.109912636  ·  0s ago
    >>109912620 Rust haters were filtered by the borrow checker because theyre scriptkiddies who
    "hack" on code rather than release finished products

                                4286 more: n or go down to load them










 enter open the thread   n more results   esc back   , settings   ? help
