src/snapshots/ck__ui_tests__archive_search_typing.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  desuarchive  ›  /g/  Technology                                                      0 threads










                                             No threads

















  search the archive  borrow▏   enter accept   esc clear
