src/snapshots/ck__ui_tests__catalog_compact.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  Technology                                                            4 threads

  ▌  pinned   locked  Welcome to /g/  Read the rules before post…  3 replies · 0 images · 1y ago
    ◉ /lmg/ - Local Models General  Previous threads: >>900 &…  312 replies · 58 images · 5h ago
    No.1100  >be me >write tests                                 12 replies · 0 images · 40m ago
    Rust or C++?  Which one and why? [spoiler]                    45 replies · 3 images · 2d ago























 enter open   v view image   w watch   / filter   . more   f hints   s sort   c layout   ? help
