src/snapshots/ck__ui_tests__catalog_grid.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  Technology                                                            4 threads





           …                     …                  no file                  …



    Welcome to /g/        /lmg/ - Local Mo…     >be me >write te…     Rust or C++?
    Read the rules b…     Previous threads…                           Which one and wh…
    R3 I0 · 1y            R312 I58 · 5h         R12 I0 · 40m          R45 I3 · 2d
















 enter open   f hints   . more   / filter   v view   w watch   s sort   c compact   r reload   , set
