src/snapshots/ck__ui_tests__catalog_grid_backgrounds.snap
---
source: src/ui_tests.rs
expression: bg_map(&mut a)
---
ppppbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb

  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  sshhhhhhhhhhhhhhhhss  SShhhhhhhhhhhhhhhhSS  sshhhhhhhhhhhhhhhhss  sshhhhhhhhhhhhhhhhss
  ssssssssssssssssssss  SSSSSSSSSSSSSSSSSSSS  ssssssssssssssssssss  ssssssssssssssssssss
  ssssssssssssssssssss  SSSSSSSSSSSSSSSSSSSS  ssssssssssssssssssss  ssssssssssssssssssss
  ssssssssssssssssssss  SSSSSSSSSSSSSSSSSSSS  ssssssssssssssssssss  ssssssssssssssssssss
















bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
